* Synchronizing the black cards with the officially listed fan translations from the CAH website by "Balz" and "Raphael". * Adding comments with contexts, known references and alternative/earlier/official translations.    * -> easier searchability for phrases and words    * -> should prevent duplicates and wrong translations. * Improving some phrases * Moving some phrases to other topics

--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -329,7 +329,7 @@
 \whitecard{Basis}{Gestalten-Wandler}%
 \whitecard{Basis}{Pornostars}%
 \whitecard{Basis}{Vergewaltigen und plündern.}%
-\whitecard{Basis}{Drive-by shooting.}%
+\whitecard{Basis}{Drive-by Shooting.}%
 \whitecard{Basis}{Kantinenfraß.}%
 \whitecard{Basis}{Klunker.}%
 \whitecard{Basis}{Berater.}% 
@@ -342,69 +342,66 @@
 \whitecard{Basis}{Ein M16 Sturmgewehr.}%
 \whitecard{Basis}{110\% geben}%
 %
-\blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
-\blackcard{1}{Basis}{Auf was verzichtest du in der Fastenzeit?\newline \underl.}%
-\blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
+\blackcard{1}{Basis}{Die Alternative Medizin nutzt nun die heilsamen Kräfte von \underl.}% before: heilende Energie
+\blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}% original: Klassenfahrt
 \blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben aufgrund von \underl nicht machen.}%
 \blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
 \blackcard{1}{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
 \blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}%
-\blackcard{1}{Basis}{Man sagt, im Knast könne man für 200 Zigaretten \underl bekommen.}%
-\blackcard{1}{Basis}{Nach den Erdbeben brachte Bill Gates \underl zu den Haitianern.}%
+\blackcard{1}{Basis}{Man sagt, in der JVA Tegel könne man für 200 Zigaretten \underl bekommen.}% before: Knast
+\blackcard{1}{Basis}{Nach dem Erdbeben brachte Bill Gates \underl zu den Haitianern.}% original: Sean Penn
 \blackcard{1}{Basis}{Papa, warum weint Mama?}%
 \blackcard{1}{Basis}{\underl. High Five, Bro.}%
-\blackcard{1}{Basis}{\underl. So will ich sterben!}%
 \blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}%
-\blackcard{1}{Basis}{Warum bin ich so klebrig?}%
+\blackcard{1}{Basis}{Warum bin ich so klebrig?}% original: verklebt
 \blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}%
 \blackcard{1}{Basis}{Warum tut mir alles weh?}%
 \blackcard{1}{Basis}{Was habe ich aus Dänemark mitgebracht?}%
 \blackcard{1}{Basis}{Was denkt Angela Merkel gerade? \underl.}%
-\blackcard{1}{Basis}{Was gibt es tonnenweise im Himmel?}%
+\blackcard{1}{Basis}{Was gibt es im Himmel tonnenweise?}%
 \blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
-\blackcard{1}{Basis}{Was hat nie verfehlt, eine Party zu beleben?}%
-\blackcard{1}{Basis}{Was hilft Angela Merkel zu entspannen?}%
+\blackcard{1}{Basis}{Was hat nie versagt, eine Party aufzupeppen?}% before: nie verfehlt... zu beleben - original: Was funktioniert immer, um eine Party aufzupeppen?
+\blackcard{1}{Basis}{Was hilft Angela Merkel beim Entspannen?}% original: Obama
 \blackcard{1}{Basis}{Was ist denn das für ein Geräusch?}%
 \blackcard{1}{Basis}{Was ist denn das für ein Geruch?}%
 \blackcard{1}{Basis}{Was ist der beste Freund eines Mädchens?}%
-\blackcard{1}{Basis}{Was ist die neue Modediät?}%
+\blackcard{1}{Basis}{Was ist die neue Modediät?}% original: Trend-Diät
 \blackcard{1}{Basis}{Was ist meine geheime Kraft?}%
 \blackcard{1}{Basis}{Was verstecken meine Eltern vor mir?}%
-\blackcard{1}{Basis}{Was werde ich aus der Zukunft mitbringen, um alle davon zu überzeugen, dass ich ein großartiger Magier bin?}%
-\blackcard{1}{Basis}{Was willst du nicht in deinem asiatischen Essen finden?}%
+\blackcard{1}{Basis}{Was werde ich aus der Zukunft zurückbringen, um alle davon zu überzeugen, dass ich ein mächtiger Magier bin?}% before: großartiger
+\blackcard{1}{Basis}{Was willst du nicht in deinem asiatischen Essen finden?}% original: chinesischen
 \blackcard{1}{Basis}{Was wird mit dem Alter besser?}%
-\blackcard{1}{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden?}%
-\blackcard{1}{Basis}{Wenn ich ein Milliadär wäre, wem würde ich eine Statue widmen?}%
-\blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}%
-\blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}%
+\blackcard{1}{Basis}{Was würde Oma verstören, aber doch irgendwie anziehend finden?}% before: ekelhaft... seltsam bezaubernd
+\blackcard{1}{Basis}{Wenn ich Milliadär bin, werde ich \underl  eine 15m hohe Statue widmen.}% original: Millionär OR Milliardär ... 50-Fuß große Statue in Gedenken an... errichten lassen
+\blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}% original: Präsident der USA
+\blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}% original: Wie halte ich meine Beziehung am Laufen?
 \blackcard{1}{Basis}{Wir stellen vor: Xtreme Fußball! Es ist wie normales Fußball, nur mit \underl.}%
 \blackcard{1}{Basis}{Womit wirst du deinen Partner immer beeindrucken können?}%
-\blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
-\blackcard{1}{Basis}{Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen?}%
+\blackcard{1}{Basis}{TSA-Richtlinien verbieten im Flugzeug ab sofort: \underl.}%
+\blackcard{1}{Basis}{Was benutzt man in der Nachhilfe, um Schülern in Hauptschulen zum Erfolg zu verhelfen?}% before: Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen? - original: in Großstädten OR in Problembezirken
 \blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
 \blackcard{1}{Basis}{Was ist am meisten emo?}%
 \blackcard{1}{Basis}{Was hast du aus Mexiko mitgebracht?}%
-\blackcard{1}{Basis}{\underl? Dafür gibts eine App.}%.
+\blackcard{1}{Basis}{\underl? Gibt's ne App für.}%.
 \blackcard{1}{Basis}{\underl. Einmal gepoppt, nie mehr gestoppt?}%
 \blackcard{1}{Basis}{Was ist am krustigsten?}%
 \blackcard{1}{Basis}{In seinen letzten Momenten dachte Michael Jackson an \underl.}%
 \blackcard{1}{Basis}{\underl ist was Frauen wollen.}%
-\blackcard{1}{Basis}{Lieber Dr. Sommer,\newline Ich habe Probleme mit \underl und würde dich gerne um Rat bitten.}%
-\blackcard{1}{Basis}{\underl. So möchte ich sterben.}%
+\blackcard{1}{Basis}{Liebes Dr. Sommer Team,\newline Ich habe Probleme mit \underl und würde Euch gerne um Rat bitten.}% original: Dr. Sommer ... Dich...
+\blackcard{1}{Basis}{\underl. So möchte ich sterben.}% alternative: will
 \blackcard{1}{Basis}{Wissenschaftler haben kürzlich einen primitiven Stamm entdeckt, der \underl verehrt.}%
 \blackcard{1}{Basis}{Doch bevor ich Sie töte, Mr. Bond, muss ich Ihnen \underl zeigen.}%
-\blackcard{1}{Basis}{Und nun auf Eurosport: Das Meisterschaftsturnier des \underl.}%
 \blackcard{1}{Basis}{Wie riechen alte Leute?}%
 \blackcard{2}{Basis}{Ich habe \underl  nie wirklich verstanden, bis   ich auf \underl   gestoßen bin.}%
-\blackcard{2}{Basis}{In einer Welt verwüstet von  \underl, ist \underl dein einziger Trost.}%
-\blackcard{2}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}%
+\blackcard{2}{Basis}{In einer von \underl  verwüsteten Welt, ist \underl dein einziger Trost.}% original: unsere einzige Hoffnung
+\blackcard{2}{Basis}{Ja richtig, ich habe \underl getötet. Du fragst, wie? \underl .}%
 \blackcard{2}{Basis}{Liebe Margret, Ich habe Probleme mit \underl. Kannst du mir einen Rat geben?}%
 \blackcard{2}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.\newline}%
 \blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}%
-\blackcard{2}{Basis}{\underl ist eine heikle Lage, die zu \underl führt.}%
+\blackcard{2}{Basis}{\underl ist eine heikle Lage, die zu \underl führt.}% original: schmaler Grat
 \blackcard{2}{Basis}{Und der Oscar für \underl geht an \underl.}%
-\blackcard{2}{Basis}{Bei meinem nächsten Zaubertrick wrede ich \underl aus einem \underl holen.}%
-\blackcard{2}{Basis}{Wer bildet das nächste Superhelden/ Gehilfen-Duo?}%
+\blackcard{2}{Basis}{Bei meinem nächsten Zaubertrick werde ich \underl  aus \underl  holen.}%
 \blackcard{3}{Basis}{\underl + \underl = \underl.}%
-\blackcard{3}{Basis}{Schreibe einen Haiku:\newline \underl\newline  \underl\newline  \underl}%
-\blackcard{3}{Basis}{\underl + \underl = \underl.}%
+\blackcard{3}{Basis}{Schreibe ein Haiku:\newline \underl\newline  \underl\newline  \underl}%
+\blackcard{1}{Basis}{Im Profi-Baseball wurde \underl verboten, weil es Spielern unfaire Vorteile verschaffte.}%
+\blackcard{1}{Basis}{Studien belegen, dass Laborratten 50\% schneller durch ein Labyrinth finden, wenn sie \underl  ausgesetzt waren.}% original: Teststrecke
