--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -66,7 +66,7 @@
 \whitecard{Böse}{Kriegsbedingte Amputationen.}%
 \whitecard{Böse}{Die jährliche Massenhinrichtung.}%
 %
-\blackcard{1}{Böse}{Wofür ist Krieg gut?}%
-\blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
-\blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?}%
+\blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als der Weiße Mannr ihnen \underl zeigte.}%
+\blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug aus abgeworden?}% original: im Luftraum von 
 \blackcard{1}{Böse}{Menschen, die aussehen wie \underl.}%
+\blackcard{1}{Böse}{Weiße Menschen sind wie \underl.}%
