--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -30,4 +30,4 @@
 \whitecard{Drogen}{Crystal Meth.}%
 %
 \blackcard{1}{Drogen}{Was ist meine Anti-Droge?}%
-\blackcard{2}{Drogen}{Als ich einen Acid-Trip hatte, wurde \underl zu \underl.}%
+\blackcard{2}{Drogen}{Als ich auf einem Acid-Trip war, verwandelte sich \underl in \underl.}% original: LSD
