--- a/categories/fsk18.tex
+++ b/categories/fsk18.tex
@@ -49,3 +49,4 @@
 \whitecard{FSK 18}{Pacman, unkontrollierbar am Sperma-Schlucken.}%
 %
 \blackcard{1}{FSK 18}{Fun Tip! Wenn dein Mann dich um einen Blowjob bittet, überrasche ihn stattdessen mit \underl.}%
+\blackcard{1}{FSK 18}{Was ist es, wodurch du immer jemanden flachgelegt bekommst?}% original: Wie kriegst du immer jemanden flachgelegt? OR Was wird dich immer jemanden flachlegen lassen können?
