--- a/categories/kultur.tex
+++ b/categories/kultur.tex
@@ -71,15 +71,19 @@
 % replacement for "Toni Morrisons Vagina"? -> awarded novelist, teacher
 % replacement for "Sean Penn"? actor, filmmaker
 %
-\blackcard{1}{Kultur}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
-\blackcard{1}{Kultur}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
-\blackcard{1}{Kultur}{Bald zu sehen: \underl, das Musical.}%
-\blackcard{2}{Kultur}{Das neue Superhelden-Duo: \underl und \underl.}%
-\blackcard{1}{Kultur}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
-\blackcard{1}{Kultur}{Gleich auf RTL: die Weltmeisterschaft der \underl.}%
-\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars, die mit \underl zusammenleben.}%
-\blackcard{1}{Kultur}{Was hat Vin Diesel zu Mittag gegessen?}%
-\blackcard{1}{Kultur}{Was ist Batmans geheime Vorliebe?}%
-\blackcard{2}{Kultur}{Dreamworks präsentiert: "\underl, die Geschichte von \underl."}%
-\blackcard{2}{Kultur}{In ``M. Night`` Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
+\blackcard{1}{Kultur}{In ihrem neuen Disney-Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
+\blackcard{1}{Kultur}{Doch bevor ich Sie töte, Mr. Bond, muss ich Ihnen \underl zeigen.}%
+\blackcard{1}{Kultur}{Diese Saison auf dem Broadway: \underl: Das Musical.}%
+\blackcard{2}{kultur}{Wer bildet das nächste Superhelden-Gehilfen-Duo?}%
+\blackcard{1}{Kultur}{Demnächst erscheint von J.K Rowling: Harry Potter und die Kammer des \underl.}%
+\blackcard{1}{Kultur}{Und nun auf Eurosport: Das Meisterschaftsturnier im \underl.}%
+\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 C-Promis, die mit \underl zusammenleben.}% before: Stars - original: MTVs ... 8 verlebte Promis
+\blackcard{1}{Kultur}{Was hat Vin Diesel zu Mittag gegessen?}% original: zu Abend
+\blackcard{1}{Kultur}{Was ist Batmans geheimes Laster?}% before: Vorliebe
+\blackcard{2}{Kultur}{LifeTime\SymbReg präsentiert: ``\underl, die Geschichte von \underl.``}% before: Dreamworks
+\blackcard{2}{Kultur}{In ``M. Night`` Shyamalans neuem Film entdeckt Bruce Willis, dass \underl in Wirklichkeit die ganze Zeit \underl war.}% original: in Wahrheit
 \blackcard{1}{Kultur}{99 \underl auf ihrem Weg zum Horizont.}%
+\blackcard{1}{Kultur}{Bob Ross ist hier, um \underl.}%
+\blackcard{1}{Kultur}{``Auf diese Art geht die Welt zugrund: Auf diese Art geht die Welt zugrund: Nicht mit einem Knall: mit \underl.``}% ref. to T.S. Eliot - Die hohlen Männer - original: so wird die Welt enden... nicht mit einem Knall sondern mit...
+\blackcard{1}{Kultur}{``War, huh / What is it good for?``}% ref. to song Edwin Starr: War - before: Wofür ist Krieg gut?
+\blackcard{1}{Politik}{Während Picassos oftmals übersehener ``Braunen Periode`` schuf er hunderte Gemälde von \underl.}%
