--- a/categories/politik.tex
+++ b/categories/politik.tex
@@ -27,6 +27,7 @@
 \whitecard{Politik}{CDU-Wähler.}% probably: Republikaner
 \whitecard{Politik}{Die priviligierte Oberklasse.}%
 \whitecard{Politik}{Die Terroristen.}%
+\whitecard{Politik}{Donald Trump.}%
 \whitecard{Politik}{Frank-Walter Steinmeier.}% probably from: Aaron Burr or Ronald Reagan?
 \whitecard{Politik}{Helmut Schmidt.}% trying to match: Aaron Burr or Ronald Reagan
 \whitecard{Politik}{Helmut Kohl.}% trying to match: Aaron Burr or Ronald Reagan
@@ -53,4 +54,6 @@
 %
 \blackcard{1}{Politik}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
 \blackcard{1}{Politik}{Es ist eine Schande, dass Kinder heutzutage alle mit \underl in Berührung kommen.}%
-\blackcard{1}{Politik}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die französische Regierung die Erforschung von \underl.}%
+\blackcard{1}{Politik}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, steckte die französische Regierung Millionen in die Erforschung von \underl.}% original: Während die USA und Sovietunion um den Mond kämpften, steckte die mexikanische Rgierung Millionen von Pesos in die Erfroschung von ...
+\blackcard{1}{Politik}{Gerüchten zufolge ist \underl  gefüllt mit \underl  Vladimir Putins Lieblingsessen.}%
+\blackcard{1}{Politik}{Was bevorzugt Donald Trump?}% original: Dick Cheney - former USA Vice President
