--- a/categories/religion.tex
+++ b/categories/religion.tex
@@ -44,3 +44,5 @@
 \whitecard{Religion}{Scientology.}%
 %
 \blackcard{1}{Religion}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
+\blackcard{1}{Religion}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
+\blackcard{1}{Religion}{Auf was verzichte ich in der Fastenzeit?\newline \underl.}%
