--- a/categories/werbung.tex
+++ b/categories/werbung.tex
@@ -47,9 +47,9 @@
 \whitecard{Werbung}{All-you-can-eat Shrimps für 4,99 Euro.}%
 \whitecard{Werbung}{Das schwedische Tempur-Pedic\SymbReg\newline Schlafsystem.}%
 %
-\blackcard{1}{Werbung}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
-\blackcard{1}{Werbung}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}%
-\blackcard{1}{Werbung}{\underl: Von Kindern getestet, von Müttern empfohlen.}%
+\blackcard{1}{Werbung}{Ein romantisches Essen bei Kerzenschein wäre unvollständig ohne \underl.}%
+\blackcard{1}{Werbung}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}% original: Kohle ... bösen Kindern...
+\blackcard{1}{Werbung}{\underl: Von Kindern getestet, von Müttern empfohlen.}% original: mit Kindern getestet, von Müttern freigegeben
 \blackcard{1}{Werbung}{\underl: Gut bis zum letzten Tropfen.}%
 \blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg  Spielzeug?}%
 \blackcard{1}{Werbung}{\underl macht Kinder froh und Erwachsene ebenso.}%
