--- a/categories/geschichte.tex
+++ b/categories/geschichte.tex
@@ -27,7 +27,7 @@
 \whitecard{Geschichte}{Historische schwarze Kollegen.}%
 \whitecard{Geschichte}{Der Versailler Vertrag.}%
 \whitecard{Geschichte}{Genghis Khan.}%
-\whitecard{Geschichte}{Hurricane Katrina.}%
+\whitecard{Geschichte}{Hurrikan Katrina.}%
 \whitecard{Geschichte}{Kim Jong-il.}%
 \whitecard{Geschichte}{Lee Harvey Oswald.}%
 \whitecard{Geschichte}{Sklaverei.}%
@@ -43,7 +43,6 @@
 \whitecard{Geschichte}{Gandhi.}%
 \whitecard{Geschichte}{Martin Luther King.}%
 %
-\blackcard{1}{Geschichte}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
-\blackcard{1}{Geschichte}{Das Naturkundemuseum stellt jetzt auch \underl aus.}%
-\blackcard{1}{Geschichte}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}%
-\blackcard{1}{Geschichte}{Womit werden wir in 1000 Jahren bezahlen?}%
+\blackcard{1}{Geschichte}{Mit dem Ziel, mehr Besucher anzulocken, eröffnet das Naturkundemuseum eine interaktive Ausstellung über \underl.}% before: Das Naturkundemuseum stellt jetzt auch \underl aus. - original: Beim Versuch...das Smithsonian Museum of Natural History...
+\blackcard{1}{Geschichte}{``Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.``}% ref. to Albert Einstein
+\blackcard{1}{Geschichte}{Was ist in 1000 Jahren unsere Währung, wenn Papiergeld nur eine entfernte Erinnerung ist?}%
